2000-05-28  James Henstridge  <james@daa.com.au>

	* app/interface.c (tool_data): add beziergon to toolbox.

	* objects/standard/standard.c (dia_plugin_init): initialise the new
	Beziergon object type.

	* objects/standard/beziergon.c: an object based on BezierShape.

	* lib/dummy_dep.h (dummy_dep): added to dummy_dep.

	* lib/beziershape.[ch]: new files implementing a bezier shape.

2000-05-26  James Henstridge  <james@daa.com.au>

	* lib/text.c (text_key_event): handle multibyte inserts.
	(text_key_event): also add home and end keybindings.

	* app/interface.c (create_display_shell): connect handlers for
	focus_in_event, focus_out_event, realize and unrealize signals.

	* app/display.[ch] (new_display): initialise input context members.

	* app/disp_callbacks.[ch]: added XIM support here.

	* lib/font.c (suck_font): the black and white pixel values should be
	taken from a 1 bit colormap rather than the default colormap.

	Hans Breuer's Windows patches ...

	* lib/font.c: use Courier New for fixed width font on windows
	machines.

	* lib/dia_image.h: change to "struct _DiaImage".

	* lib/dia_image.c: change "struct DiaImage" to "struct _DiaImage"

	* app/disp_callbacks.c (ddisplay_canvas_events): allow ctrl+right
	mouse button for object menu.  This will make two button mouse owners
	happier.

2000-05-25  James Henstridge  <james@daa.com.au>

	* app/filedlg.c (file_open_ok_callback): use diagram_load here.

	* app/app_procs.c (app_init): add extra NULL argument to call of
	diagram_load.

	* app/load_save.h: remove prototype.

	* app/load_save.c: remove diagram_data function here.

	* app/diagram.h: added prototype.

	* app/diagram.c (diagram_load): new function here, which uses import
	filters.

	* plug-ins/dxf/dxf.c: register the import filter as well.

	* plug-ins/dxf/dxf-import.c: added (unfinished) DXF import filter from
	Steffen Macke <macke@heini.fbbwu.fh-lueneburg.de>

	* objects/standard/line.c: add start_point and end_point properties